add image backround

--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -87,30 +87,16 @@
 
     </article> -->
     <article class="article1">
-        <h3 style="font-size: 40px;
-        text-align: center;
-        font-weight: 700;
-        padding-top: 30px;
-        padding-left: 20px;
-        padding-right: 20px;
-        color: white;
-       ">Invertir bien y con visión es: Invertir en las necesidades de un sector que crece de manera acelerada y que
+        <h2>Invertir bien y con visión es: Invertir en las necesidades de un sector que crece de manera acelerada y que
             aún
-            pocos inversionistas lo hacen. </h3>
+            pocos inversionistas lo hacen. </h2>
 
     </article>
 
-    <article class="article1" style="background-color: #005E6C;">
-        <h3 style="font-size: 40px;
-        text-transform: uppercase;
-        text-align: center;
-        font-weight: 700;
-        padding-top: 30px;
-        padding-left: 20px;
-        padding-right: 20px;
-        color: white;
-       ">¡Regístrate ahora para nuestro Webinar Exclusivo y descubre cómo el negocio del banano puede transformar tu
-            vida financiera! </h3>
+    <article class="article2" style="background-color: #005E6C;">
+        <h2>
+       ¡Regístrate ahora para nuestro Webinar Exclusivo y descubre cómo el negocio del banano puede transformar tu
+            vida financiera! </h2>
 
     </article>
     <article class="contador">
@@ -171,22 +157,14 @@
 
     </section>
 
-    <article class="article1" style="background-color: #005E6C;">
-        <h3 class="fecha" style="font-size: 40px;
-        text-transform: uppercase;
-        text-align: center;
-        font-weight: 700;
-        padding-top: 50px;
-        padding-left: 20px;
-        padding-right: 20px;
-        color: white;
-       ">
+    <article class="article3" style="background-color: #005E6C;">
+        <h2 class="fecha">
 
             📅 Fecha del Webinar: Sabado 22 de febrero <br>
             📍 Lugar: Desde la comodidad de tu hogar
 
 
-        </h3>
+        </h2>
 
     </article>
 
