--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -61,16 +61,27 @@
         <div class="overlay">
             <section class="section_2 card">
                 <div class="imagen">
-                    <img src="./assets/cm-005.png" alt="">
+                    <img src="./assets/banner_img/camara_04.png" alt="">
                     <p>OPORTUNIDAD</p>
                 </div>
 
                 <p>
                     Mientras otros <span> invierten en sembrar</span>, pocos invierten en satisfacer las <span>necesidades</span> de los que
-                    siembran y del producto cosechado: <span>¡Los servicios de conservación y maduración!</span> Ahí es donde la
-                    demanda supera a la oferta y <span>se abren las oportunidades</span> para todo inversor visionario.
+                    siembran y del producto cosechado: <span>¡Los servicios de conservación y maduración!</span> 
                 </p>
 
+            </section>
+
+            <section class="section_2 card">
+                <div class="imagen">
+                    <img src="./assets/banner_img/camara_06.png" alt="">
+                    <p>INVERSIÓN</p>
+                    
+                </div>
+                <p>
+                   <span> Ahí es donde la
+                    demanda supera a la oferta</span> y se abren las oportunidades para todo inversor visionario.
+                </p>
             </section>
 
 
