--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -52,16 +52,11 @@
     <div class="linea1"> </div>
     <div class="linea2"> </div>
 
-    <!-- <section class="section_1">
-        <h2>Se abren las oportunidades para todo <span>inversor visionario</span>
-        </h2>
-
-    </section> -->
     <main class="main">
         <div class="overlay">
             <section class="section_2 card">
                 <div class="imagen">
-                    <img src="./assets/cm-005.png" alt="">
+                    <img src="./assets/banner_img/camara_04.png" alt="">
                     <p>OPORTUNIDAD</p>
                 </div>
 
@@ -77,7 +72,7 @@
 
             <section class="section_3 card">
                 <div class="imagen">
-                    <img src="./assets/im003.jpeg" alt="">
+                    <img src="./assets/banner_img/camara_05.png" alt="">
                     <p>VISIÓN</p>
 
                 </div>
@@ -90,7 +85,7 @@
             </section>
             <section class="section_4 card">
                 <div class="imagen">
-                    <img src="./assets/banner_img/b_001.jpg" alt="">
+                    <img src="./assets/banner_img/camara_06.png" alt="">
                     <p>INVERSIÓN</p>
 
                 </div>
@@ -98,21 +93,24 @@
                 <p class="typewriter">Muchos invierten en sembrar y pocos invierten en <span>satisfacer las
                         necesidades</span> de los
                     que siembran y del
-                    producto cosechado: <span>¡Los servicios de conservación y maduración!</span>
-                    Ahí es donde la demanda supera a la oferta y <span>se abren las oportunidades</span> para todo
+                    producto cosechado: <span>¡Los servicios de conservación y maduración!</span></p>       
+            </section>
+
+            <section class="section_2 card">
+                <div class="imagen">
+                    <img src="./assets/banner_img/camara_01.png" alt="">
+                    <p>FUTURO</p>
+
+                </div>
+                <p> <span>Ahí es donde la demanda supera a la oferta</span> y se abren las oportunidades para todo
                     inversor
                     visionario.</p>
-
             </section>
 
 
         </div>
 
     </main>
-    <!-- <article class="article1">
-        <h2>¿Te gustaría conocer más y analizar la posibilidad de ser parte de un sector en crecimiento?</h2>
-
-    </article> -->
     <article class="article2">
         <h2>¡Descubre cómo hacerlo en Nuestro Webinar <strong>Exclusivo</strong>!</h2>
 
@@ -123,6 +121,7 @@
             tiempo real de tu inversión. </h2>
 
     </article>
+
     <article class="contador">
         <div id="countdown"></div>
     </article>
@@ -242,6 +241,7 @@
         <a href="#contacto">QUIERO REGISTRARME</a>
         
     </section>
+
 
 
     <footer class="footer">
