update size LPS

--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -74,7 +74,7 @@
 
             <section class="section_2 card">
                 <div class="imagen">
-                    <img src="./assets/banner_img/camara_06.png" alt="">
+                    <img src="./assets/banner_img/camara_01.png" alt="">
                     <p>INVERSIÓN</p>
                     
                 </div>
@@ -104,7 +104,7 @@
 
     </article>
 
-    <article class="article2" style="background-color: #005E6C;">
+    <article class="article2">
         <h2>
        ¡Regístrate ahora para nuestro Webinar Exclusivo y descubre cómo el negocio del banano puede transformar tu
             vida financiera! </h2>
@@ -168,7 +168,7 @@
 
     </section>
 
-    <article class="article3" style="background-color: #005E6C;">
+    <article class="article3">
         <h2 class="fecha">
 
             📅 Fecha del Webinar: Sabado 22 de febrero <br>
@@ -188,17 +188,17 @@
 
     </section>
     <section class="section_6" style="width: 100%;
-    height: 500px;
-    font-size: 35px;
+    height: 400px;
+    font-size: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 100px;">
     <div  class="maduracion_check" style="width: 1000px; padding-top: 100px;">
-        <div>✅Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de suministro.</div>
-        <div>✅Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la preocupación  de la gestión operativa y comercial.</div>
-        <div>✅Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</div>
-        <div>✅Oportunidad de hacer preguntas en vivo durante el webinar.</div>
+        <div>✅ Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de suministro.</div>
+        <div>✅ Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la preocupación  de la gestión operativa y comercial.</div>
+        <div>✅ Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</div>
+        <div>✅ Oportunidad de hacer preguntas en vivo durante el webinar.</div>
 
     </div>
 
