--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -39,7 +39,7 @@
                     <div class="text_01">
                         <img class="logo" src="./assets/logo_negativo.png" alt="logo">
                         <h2>DESCUBRE EL NEGOCIO RENTABLE DE LAS</h2>
-                        <h1>CÁMARAS DE MADURACIÓN DE BANANO </h1>
+                        <h1>CÁMARAS DE <span>MADURACIÓN DE BANANO</span> </h1>
 
                     </div>
                 </div>
@@ -72,7 +72,7 @@
 
             <section class="section_3 card">
                 <div class="imagen">
-                    <img src="./assets/banner_img/camara_05.png" alt="">
+                    <img src="./assets/banner_img/camara_01.png" alt="">
                     <p>VISIÓN</p>
 
                 </div>
@@ -98,7 +98,7 @@
 
             <section class="section_2 card">
                 <div class="imagen">
-                    <img src="./assets/banner_img/camara_01.png" alt="">
+                    <img src="./assets/banner_img/camara_03.png" alt="">
                     <p>FUTURO</p>
 
                 </div>
@@ -190,14 +190,14 @@
     <section class="section_6">
         <div class="accordion">
             <div class="accordion-item">
-                <div class="accordion-header">✅Conoce el potencial de <span>rentabilidad</span></div>
+                <div class="accordion-header">✅ Conoce el potencial de <span>rentabilidad</span></div>
                 <div class="accordion-content">
                     <p>📈 Aprende sobre el creciente mercado del <span>banano</span> y cómo puedes obtener ganancias
                         tangibles desde el primer día brindando servicios para el sector bananero.</p>
                 </div>
             </div>
             <div class="accordion-item">
-                <div class="accordion-header">✅Entiende el impacto de la <span>Demanda</span> y <span>Oferta</span>
+                <div class="accordion-header">✅ Entiende el impacto de la <span>Demanda</span> y <span>Oferta</span>
                 </div>
                 <div class="accordion-content">
                     <p>🍌 Obtén información valiosa sobre el crecimiento del consumo de <span>banano</span> en Perú y la
@@ -207,7 +207,7 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <div class="accordion-header">✅Descubre una <span>Alternativa Rentable</span> a la Agricultura
+                <div class="accordion-header">✅ Descubre una <span>Alternativa Rentable</span> a la Agricultura
                     Tradicional</div>
                 <div class="accordion-content">
                     <p>🚜 Compara los riesgos y beneficios de invertir en la agricultura tradicional con la opción de
@@ -217,7 +217,7 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <div class="accordion-header">✅Explora las <span>Ventajas Competitivas</span> del Servicio de Maduración
+                <div class="accordion-header">✅ Explora las <span>Ventajas Competitivas</span> del Servicio de Maduración
                 </div>
                 <div class="accordion-content">
                     <p>🔄 Entiende por qué el negocio de maduración de <span>banano</span> ofrece un flujo de ingresos
