UPDATE VERSION MOBILE

--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -171,7 +171,7 @@
     <article class="article3">
         <h2 class="fecha">
 
-            📅 Fecha del Webinar: Sabado 22 de febrero <br>
+            📅 Fecha del Webinar: Sabado 24 de febrero <br>
             📍 Lugar: Desde la comodidad de tu hogar
 
 
@@ -181,8 +181,7 @@
 
     <!-- MAILCHIMP -->
 
-    <section class="section_5" style="
-    height: 100px;">
+    <section class="section_5">
         <h2>¿Qué verás en este webinar?
         </h2>
 
@@ -213,7 +212,7 @@
     </section>
 
     <section class="section_9">
-        <a href="#contacto">REGISTRATE</a>
+        <a href="#contacto">REGÍSTRATE</a>
 
     </section>
 
