--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -186,14 +186,8 @@
         </h2>
 
     </section>
-    <section class="section_6" style="width: 100%;
-    height: 400px;
-    font-size: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 100px;">
-    <div  class="maduracion_check" style="width: 1000px; padding-top: 100px;">
+    <section class="section_6">
+    <div  class="maduracion_check">
         <div>✅ Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de suministro.</div>
         <div>✅ Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la preocupación  de la gestión operativa y comercial.</div>
         <div>✅ Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</div>
