--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -171,7 +171,7 @@
     <article class="article3">
         <h2 class="fecha">
 
-            📅 Fecha del Webinar: Sabado 24 de febrero <br>
+            📅 Fecha del Webinar: Sábado 24 de febrero <br>
             📍 Lugar: Desde la comodidad de tu hogar
 
 
