--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -188,14 +188,14 @@
     </section>
     <section class="section_6">
     <div  class="maduracion_check">
-        <div>✅ Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de suministro.</div>
-        <div>✅ Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la preocupación  de la gestión operativa y comercial.</div>
-        <div>✅ Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</div>
-        <div>✅ Oportunidad de hacer preguntas en vivo durante el webinar.</div>
+        <p>✅ Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de suministro.</p>
+        <p>✅ Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la preocupación  de la gestión operativa y comercial.</p>
+        <p>✅ Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</p>
+        <p>✅ Oportunidad de hacer preguntas en vivo durante el webinar.</p>
 
     </div>
-
     </section>
+
     <section class="section_7">
         <img src="./assets/im001.jpeg" alt="">
 
