Fix formatting in section_06 of Landig_webinar_maduracion.html

--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -178,14 +178,14 @@
         </h2>
 
     </section>
-    <!-- <section class="section_06">
+    <section class="section_06">
     <div  class="maduracion_check">
-        <p>✅ Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de suministro.</p>
-        <p>✅ Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la preocupación  de la gestión operativa y comercial.</p>
-        <p>✅ Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</p>
-        <p>✅ Oportunidad de hacer preguntas en vivo durante el webinar.</p>
+        <p> Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de suministro.</p>
+        <p> Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la preocupación  de la gestión operativa y comercial.</p>
+        <p> Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</p>
+        <p> Oportunidad de hacer preguntas en vivo durante el webinar.</p>
     </div>
-    </section> -->
+    </section>
 
     <section class="section_7">
         <img src="./assets/im001.jpeg" alt="">
