--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -178,12 +178,18 @@
         </h2>
 
     </section>
-    <section class="section_06">
+    <section class="section_06" style=" width: 100%;
+    font-size: 32px;
+    margin: auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    display: flex;
+    justify-content: center;">
     <div  class="maduracion_check">
-        <p> Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de suministro.</p>
-        <p> Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la preocupación  de la gestión operativa y comercial.</p>
-        <p> Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</p>
-        <p> Oportunidad de hacer preguntas en vivo durante el webinar.</p>
+        <p>✅ Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de suministro.</p>
+        <p>✅ Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la preocupación  de la gestión operativa y comercial.</p>
+        <p>✅ Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</p>
+        <p>✅ Oportunidad de hacer preguntas en vivo durante el webinar.</p>
     </div>
     </section>
 
