--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -185,7 +185,7 @@
     padding-bottom: 30px;
     display: flex;
     justify-content: center;">
-    <div  class="maduracion_check">
+    <div  class="maduracion_check" style="width: 1000px;">
         <p>✅ Introducción al negocio del banano y la importancia de las cámaras de maduración en la cadena de suministro.</p>
         <p>✅ Detalles sobre el modelo de negocio y cómo puedes ser dueño de cámaras de maduración sin la preocupación  de la gestión operativa y comercial.</p>
         <p>✅ Estrategias para asegurar ingresos diarios y un rápido retorno de la inversión.</p>
