--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -16,6 +16,14 @@
     <link rel="icon" href="./assets/logo.svg">
     <title>Webinar exlusivo</title>
     <link rel="stylesheet" href="./css/webinar_maduracion.css">
+
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+
+
+    <!--  -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
 
 
@@ -157,13 +165,13 @@
                 <img src="./assets/calendar-regular-24.png" alt="">
                 <img src="./assets/time-five-regular-24.png" alt="">
                 <img src="./assets/video-regular-24.png" alt="">
-                
+
             </div>
             <div class="cont">
                 <p>SÁBADO 24 DE FEBRERO</p>
                 <p>8:00 PM</p>
-                <p>VIRTUAL</p>                
-                
+                <p>VIRTUAL</p>
+
             </div>
 
         </div>
