Update landing page title and add meta description

--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -14,7 +14,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg">
-    <title>Webinar exlusivo</title>
+    <title>WEBINAR EXCLUSIVO</title>
+    <meta name="description" content="Las cámaras de maduración de banano, un negocio rentable en el boom agrícola">
     <link rel="stylesheet" href="./css/webinar_maduracion.css">
 
     <!-- font -->
