--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -61,13 +61,13 @@
 
     <section class="seccion_01">
         <div class="s01_container">
-            <img src="./assets/banner_img/camara_01.png" alt="">
+            <img src="./assets/banner_img/camara_01.png" alt="imagen">
             <p>En pleno auge de la Agricultura peruana, invertir bien es invertir en las necesidades de un sector que
                 crece de manera acelerada y que aún pocos inversionistas lo hacen.</p>
 
         </div>
         <div class="s01_container">
-            <img src="./assets/banner_img/camara_04.png" alt="">
+            <img src="./assets/banner_img/camara_04.png" alt="imagen">
             <p>En pleno auge de la Agricultura peruana, invertir bien es invertir en las necesidades de un sector que
                 crece de manera acelerada y que aún pocos inversionistas lo hacen.</p>
 
@@ -82,7 +82,7 @@
                 hacen</p>
 
         </div>
-        <img src="./assets/banner_img/platanos-coomplemento.png" alt="">
+        <img src="./assets/banner_img/platanos-coomplemento.png" alt="imagen">
 
     </section>
 
@@ -163,9 +163,9 @@
     <section class="seccion_04">
         <div class="superior">
             <div class="cont img">
-                <img src="./assets/calendar-regular-24.png" alt="">
-                <img src="./assets/time-five-regular-24.png" alt="">
-                <img src="./assets/video-regular-24.png" alt="">
+                <img src="./assets/calendar-regular-24.png" alt="imagen">
+                <img src="./assets/time-five-regular-24.png" alt="imagen">
+                <img src="./assets/video-regular-24.png" alt="imagen">
 
             </div>
             <div class="cont">
