--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -25,7 +25,7 @@
     <!--  -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="./css/webinar_maduracion.css">
+    <link rel="stylesheet" href="/css/webinar_maduracion.css">
 
 </head>
 
