Fix styling issue in count section

--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -251,6 +251,7 @@
     .count {
         margin: auto;
         text-align: center;
+        ;
         color: #005E6C;
         font-weight: 500;
         font-size: 65px;
@@ -269,28 +270,6 @@
         font-size: 40px;
         margin-top: 30px;
         margin-bottom: 20px;
-        font-weight: 800;
-
-    }
-
-    .countmb {
-        display: none;
-        text-align: center;
-        color: #005E6C;
-        font-weight: 500;
-
-        min-width: 90px;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-
-    }
-
-    .countmb p {
-        display: none;
-        color: #005E6C;
-        text-align: center;
-        font-size: 40px;
-
         font-weight: 800;
 
     }
@@ -566,7 +545,9 @@
         cursor: pointer;
         font-size: 50px;
     }
-
+    .countmb p{
+        display: none;
+    }
 
     @media only screen and (max-width: 600px) {
 
@@ -681,16 +662,18 @@
         }
 
 
-        .countmb p {
-            display: block;
-
-
-
+        .countmb p{
+        
+            font-weight: 900;
+            font-size: 10px;
+            min-width: 10px;
         }
-
         .count p {
-            display: none;
+            font-weight: 900;
+            font-size: 10px;
+            min-width: 10px;
 
+            /* Tamaño de las etiquetas de días, horas, minutos y segundos */
         }
 
 
@@ -864,12 +847,6 @@
             <p>Horas</p>
             <p>Minutos</p>
             <p>Segundos</p>
-        </div>
-        <div class="countmb">
-            <p>D</p>
-            <p>H</p>
-            <p>m</p>
-            <p>s</p>
         </div>
         <h3>PARA NUESTRO WEBINAR EXCLUSIVO</h3>
     </article>
