--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -170,9 +170,9 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
-        font-size: 24px;
+        font-size: 23px;
         color: #005E6C;
-        font-weight: 800;
+        font-weight: 600;
 
     }
 
@@ -193,6 +193,7 @@
 
         width: 100%;
         object-fit: cover;
+        height: 400px;
     }
 
 
@@ -206,14 +207,14 @@
 
     .s02_texto h2 {
 
-        font-size: 50px;
+        font-size: 40px;
         margin-bottom: 20px;
     }
 
     .s02_texto p {
 
         text-transform: uppercase;
-        font-size: 30px;
+        font-size: 20px;
 
     }
 
@@ -295,14 +296,14 @@
     .s03 h2 {
 
         color: #fff;
-        font-size: 40px;
+        font-size: 35px;
         margin-bottom: 20px;
     }
 
     .s03 p {
 
         color: #fff;
-        font-size: 30px;
+        font-size: 25px;
         margin-bottom: 20px;
     }
 
@@ -377,9 +378,9 @@
     .cont1 p {
 
         color: #005E6C;
-        font-size: 23px;
+        font-size: 20px;
         margin-bottom: 20px;
-        font-weight: 800;
+        font-weight: 500;
     }
 
 
