Update font sizes and styles in landing page

--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -86,13 +86,13 @@
     .text_content h1 {
         padding: 0;
         margin: 0;
-        font-size: 60px;
+        font-size: 50px;
         color: #fff;
     }
 
     .text_content h2 {
-        font-weight: 300;
-        font-size: 50px;
+        font-weight: 500;
+        font-size: 45px;
         color: #fff;
         margin-bottom: 40px;
     }
@@ -244,6 +244,13 @@
 
     }
 
+    .s02_texto h3 {
+        padding-top: 10px;
+        font-size: 25px;
+    }
+
+
+
     /* count */
     .contador {
 
@@ -321,7 +328,35 @@
 
 
     /* -------- */
+    .agregado {
+        width: 100%;
+    }
 
+    .container_add {
+        width: 80%;
+        margin: auto;
+        padding-bottom: 30px;
+
+    }
+
+    .agregado h2 {
+        color: #00AE45;
+        text-align: center;
+        font-size: 40px;
+        margin-top: 30px;
+        margin-bottom: 20px;
+        font-weight: 900;
+
+    }
+
+    .agregado p {
+        text-align: center;
+        font-size: 24px;
+        font-weight: 600;
+        color: #005E6C;
+    }
+
+    /* --------- */
     .seccion_03 {
         background-image: url('../assets/banner_img/fondo-verde-banner.jpg');
         background-size: cover;
@@ -350,6 +385,13 @@
         font-size: 28px;
         margin-bottom: 20px;
         font-weight: 300;
+    }
+
+    .s03 h3 {
+        color: #fff;
+        font-size: 30px;
+        margin-bottom: 20px;
+        font-weight: 800;
     }
 
     /* --------------- */
@@ -618,11 +660,11 @@
         }
 
         .text_content h1 {
-            font-size: 40px;
+            font-size: 20px;
         }
 
         .text_content h2 {
-            font-size: 20px;
+            font-size: 15px;
             margin-bottom: 20px;
             /* Reduce el espacio entre elementos en dispositivos móviles */
         }
@@ -642,6 +684,7 @@
         }
 
         .img_s1 {
+            gap: 100px;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -658,7 +701,7 @@
         }
 
         .p_s1 {
-            margin-top: 20px;
+            margin-top: 120px;
             /* Ajusta el margen superior del texto según sea necesario */
         }
 
@@ -761,6 +804,14 @@
             font-size: 20px;
         }
 
+        .container_add h2 {
+            font-size: 30px;
+        }
+
+        .container_add p {
+            font-size: 20px;
+        }
+
         /* Formulario de contacto */
         .container {
             width: 80%;
@@ -859,6 +910,7 @@
 </style>
 
 
+
 <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSWPS2CX" height="0" width="0"
@@ -875,7 +927,8 @@
 
                     <div class="text_01">
                         <img class="logo" src="./assets/logo_negativo.png" alt="logo">
-                        <h1>Las cámaras de maduración de banano</h1>
+                        <h1> DESCUBRE EL NEGOCIO RENTABLE DE <br>
+                            LAS CÁMARAS DE MADURACIÓN DE BANANO</h1>
                         <h2>Un negocio rentable en el boom agrícola</h2>
 
                     </div>
@@ -905,9 +958,11 @@
                 crece de manera acelerada y que aún pocos inversionistas lo hacen.</p>
             <p>Muchos invierten en sembrar y pocos invierten en satisfacer las necesidades de los que siembran y del
                 producto cosechado: ¡Los servicios de conservación y maduración!</p>
-            <p>Ahí es donde la demanda supera a la oferta y se abren las oportunidades para todo inversor visionario.
+            <p>La demanda de estos servicios supera con creces a la oferta actual. Miles de servicios de maduración se
+                facturan diariamente, pero miles más quedan en espera debido a la escasez de cámaras de maduración en
+                Lima y en todo el Perú. Es ahí donde se abren las oportunidades para todo inversor visionario.
             </p>
-            <p>¿Te gustaría conocer más y analizar la posibilidad de ser parte de un sector en crecimiento?</p>
+            <p>¡Es hora de capitalizar esta brecha en el mercado!</p>
 
         </div>
 
@@ -916,8 +971,9 @@
     <section class="seccion_02">
         <div class="s02_texto">
             <h2>INVERTIR BIEN Y <br> CON VISIÓN ES:</h2>
-            <p>invertir en las necesidades de un sector que crece de manera acelerada y que aun pocos inversionistas lo
-                hacen</p>
+            <p>INVERTIR EN LAS NECESIDADES DE UN SECTOR QUE CRECE DE MANERA ACELERADA Y QUE AUN POCOS INVERSIONISTAS LO
+                HACEN</p>
+            <h3>“LA CÁMARA DE MADURACIÓN DE FRUTAS”</h3>
 
         </div>
         <img src="./assets/banner_img/platanos-coomplemento.png" alt="imagen">
@@ -942,11 +998,25 @@
         <h3>PARA NUESTRO WEBINAR EXCLUSIVO</h3>
     </article>
 
+    <section class="agregado">
+        <div class="container_add">
+            <h2>¿Te gustaría conocer más y analizar la posibilidad de ser parte de un sector en crecimiento</h2>
+
+            <p>Conviértete en uno de los pioneros que satisfaga la creciente demanda de servicios de maduración y
+                conservación. No solo estarás generando ingresos significativos,  sino que también estarás contribuyendo
+                a mejorar la calidad y a mejorar significativamente el precio de venta de los productos de tus clientes.
+            </p>
+
+        </div>
+
+    </section>
+
     <!-- MAILCHIMP -->
     <section class="seccion_03">
         <div class="s03">
             <h2>¡REGISTRATE AHORA <br> PARA NUESTRO WEBINAR EXCLUSIVO!</h2>
             <p>Y DESCUBRE COMO EL NEGOCIO DEL BANANO PUEDE TRANSFORMAR TU VIDA FINANCIERA</p>
+            <h3>Suscríbete a nuestra Newsletter </h3>
         </div>
         <section class="container section_div" id="contacto">
             <div class="contenedor">
