--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
@@ -29,6 +30,9 @@
   <link rel="stylesheet" href="./css/styles.css" />
   <script src="https://unpkg.com/scrollreveal"></script>
   <title>Vive Rentable</title>
+  
+  <script
+    id="mcjs">!function (c, h, i, m, p) { m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p) }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/8b7f686722931bd734a2e7d9b/5aeb0cfa6f157ecbd99011dc8.js");</script>
 </head>
 
 <body>
@@ -282,7 +286,6 @@
     </div>
     <script>function loadScript(a) { var b = document.getElementsByTagName("head")[0], c = document.createElement("script"); c.type = "text/javascript", c.src = "https://tracker.metricool.com/resources/be.js", c.onreadystatechange = a, c.onload = a, b.appendChild(c) } loadScript(function () { beTracker.t({ hash: "167b64a031330cb028b22d0d6f4aa075" }) });</script>
   </footer>
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
