Update background color, add logo and animation to gracias.html, update social media links in index.html

--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
         </p>
         <div class="footer__socials">
           <span>
-            <a href="https://www.facebook.com/viverentable" target="_blank"><i class="ri-facebook-circle-fill"></i></a>
+            <a href="https://www.facebook.com/viverentablepe" target="_blank"><i class="ri-facebook-circle-fill"></i></a>
           </span>
           <span>
-            <a href="https://www.instagram.com/vive_rentable/" target="_blank"><i class="ri-instagram-line"></i></a>
+            <a href="https://www.instagram.com/viverentable/" target="_blank"><i class="ri-instagram-line"></i></a>
           </span>
           <span>
             <a href="https://www.tiktok.com/@vive_rentable_" target="_blank"><i class="ri-tiktok-fill"></i></a>
