--- a/gracias.html
+++ b/gracias.html
@@ -11,51 +11,73 @@
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-NSWPS2CX');</script>
+    <!-- icon -->
+    <link rel="icon" href="./assets/logo.svg" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gracias por suscribirte</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #f8f8f8;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
         .container {
-            max-width: 600px;
-            margin: 50px auto;
-            padding: 20px;
+            text-align: center;
             background-color: #fff;
+            padding: 40px;
             border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            animation: fadeIn 1s ease;
+        }
+        img{
+            width: 200px;
+            margin-bottom: 20px;
         }
 
         h1 {
-            color: #333;
-            text-align: center;
+            color: #005E6D;
+            font-size: 36px;
+            margin-bottom: 20px;
         }
 
         p {
             color: #666;
-            line-height: 1.6;
-            text-align: center;
+            font-size: 18px;
+            margin-bottom: 40px;
         }
 
         .button {
-            display: block;
-            width: 200px;
-            margin: 20px auto;
-            padding: 10px 20px;
-            background-color: #007bff;
+            display: inline-block;
+            background-color: #005E6D;
             color: #fff;
-            text-align: center;
-            text-decoration: none;
+            font-size: 18px;
+            padding: 12px 24px;
             border-radius: 5px;
+            text-decoration: none;
+            transition: background-color 0.3s ease;
         }
 
         .button:hover {
-            background-color: #0056b3;
+            background-color: #259e21;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
@@ -66,6 +88,7 @@
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div class="container">
+        <img src="./assets/logotipo.png" alt="imagen">
         <h1>¡Gracias por suscribirte!</h1>
         <p>Estamos emocionados de tenerte a bordo. Ahora estarás al tanto de todas nuestras actualizaciones y noticias.
         </p>
