Update webinar date and time

--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -1091,8 +1091,8 @@
 
             </div>
             <div class="cont">
-                <p>SÁBADO 24 DE FEBRERO</p>
-                <p>8:00 PM</p>
+                <p>MIÉRCOLES 6 DE MARZO</p>
+                <p>7:00 PM</p>
                 <p>VIRTUAL</p>
 
             </div>
